Add jquery logic and conditional statments for ping pong

--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.2.0.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Ping-Pong</title>
   </head>
   <body>
+    <div class="container">
+     <div class="jumbotron">
+       <h1>Ping-Pong</h1>
+     </div>
+   </div>
+  <div class="container">
+    <h1> Let's Play! </h1>
+    <h3>Rules:</h3>
+    <p>Ping Pong with count up to your number from 1 with the following exceptions:</p>
+    <ol>
+      <li> Numbers divisible by 3 become "Ping" </li>
+      <li> Numbers divisible by 5 become "Pong" </li>
+      <li> Numbers divisible by 3 and 5 becomes 'Ping-Pong!'</li>
+    </ol>
+    <form id="form-one">
+   <label for="input">Enter your number here:</label>
+   <input type="number" class="form-control" id="user-input">
+   <br>
+   <button type="submit" name="button" class="bg-primary">Ping-Pong!</button>
+ </form>
+</div>
 
+  <div class="container">
+   <div class="output">
+        <ul> <span id="list" ></span></ul>
+      </div>
+    </div>
   </body>
 </html>
