--- a/index.html
+++ b/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.2.0.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Ping-Pong</title>
-  </head>
-  <body>
-    <div class="container">
-     <div class="jumbotron">
-       <h1>Ping-Pong</h1>
-     </div>
-   </div>
-  <div class="container">
-    <h1> Let's Play! </h1>
-    <h3>Rules:</h3>
-    <p>Ping Pong with count up to your number from 1 with the following exceptions:</p>
-    <ol>
-      <li> Numbers divisible by 3 become "Ping" </li>
-      <li> Numbers divisible by 5 become "Pong" </li>
-      <li> Numbers divisible by 3 and 5 becomes 'Ping-Pong!'</li>
-    </ol>
-    <form id="form-one">
-   <label for="input">Enter your number here:</label>
-   <input type="number" class="form-control" id="user-input">
-   <br>
-   <button type="submit" name="button" class="bg-primary">Ping-Pong!</button>
- </form>
-</div>
-
-  <div class="container">
-   <div class="output">
-        <ul> <span id="list" ></span></ul>
-      </div>
-    </div>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+	<link href="css/styles.css" rel="stylesheet" type="text/css">
+	<script src="js/jquery-3.2.0.js">
+	</script>
+	<script src="js/scripts.js">
+	</script>
+	<title>Ping-Pong</title>
+</head>
+<body>
+	<div class="header">
+		<div class="jumbotron">
+			<h1>Ping-Pong</h1>
+		</div>
+	</div>
+	<div class="container">
+		<h1>Let's Play!</h1>
+		<h3>Rules:</h3>
+		<p>Ping Pong with count up to your number from 1 with the following exceptions:</p>
+		<ol>
+			<li>Numbers divisible by 3 become "Ping"</li>
+			<li>Numbers divisible by 5 become "Pong"</li>
+			<li>Numbers divisible by 3 and 5 becomes 'Ping-Pong!'</li>
+		</ol>
+		<form id="form-one" name="form-one">
+			<label for="input">Enter your number here:</label> <input class="form-control" id="user-input" type="number"><br>
+			<button class="bg-primary" name="button" type="submit">Ping-Pong!</button>
+		</form>
+	</div>
+	<div class="container">
+		<div class="output">
+			<div style="margin-left: 2em">
+				<span id="list"></span>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
