update README.md to make a table for specifications

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
 	<script src="js/jquery-3.2.0.js">
 	</script>
@@ -42,6 +43,7 @@
 				<form id="form-one" name="form-one">
 					<label for="input">Enter your number here:</label> <input class="form-control" id="user-input" min="1" placeholder="enter a number" type="number"><br>
 					<button class="button" name="button" type="submit">Ping-Pong!</button>
+          <button class="button" name="button" type="submit">Reverse!</button>
 				</form><br>
 				<div class="output">
 					<div>
