Add final touches and check for space indentation and add favicon to the page

--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
 				<h1>Let's Play!</h1>
 				<hr>
 				<h3><b>Rules:</b></h3>
-				<p>Ping Pong with count up to your number from 1 with the following exceptions:</p>
+				<p>Ping Pong with count up to your number from "1" with the following exceptions:</p>
 				<ol>
 					<li>Numbers divisible by 3 become <b>'Ping'</b></li>
 					<li>Numbers divisible by 5 become <b>'Pong'</b></li>
 					<li>Numbers divisible by 3 and 5 becomes <b>'Ping-Pong!'</b></li>
 				</ol><br>
 				<form id="form-one" name="form-one">
-					<label for="input">Enter your number here:</label> <input class="form-control" id="user-input" min="1" placeholder="enter a number" type="number"><br>
+					<label for="numeral-input">Enter your number here:</label> <input class="form-control" id="user-input" min="1" placeholder="enter a number" type="number"><br>
 					<button class="button" name="button" type="submit">Ping-Pong!</button>
-          <button class="button" name="button" type="submit">Reverse!</button>
-				</form><br>
+          <br>
 				<div class="output">
 					<div>
 						<span id="list"></span>
 					</div>
+          <br>
 				</div><!-- end column 2 -->
 			</div><!-- end row 2 -->
 		</div><!-- end div class -->
